[package]
name = "kioto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
bson = "2.10.0"
clap = "4.5.4"
crossterm = "0.27.0"
dirs = "5.0.1"
futures-util = "0.3.30"
log = "0.4.21"
polodb_core = "4.4.1"
ratatui = "0.26.1"
reqwest = "0.12.3"
rpassword = "7.3.1"
serde = "1.0.198"
serde_json = "1.0.116"
strum = "0.26.2"
tokio = "1.36.0"
tokio-tls = "0.3.1"
tokio-tungstenite = "0.21.0"
tui-textarea = "0.4.0"
uuid = "1.3.0"
