[package]
name = "kioto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
bson = "2.10.0"
chrono = "0.4.38"
clap = "4.5.4"
crossterm = "0.27.0"
dirs = "5.0.1"
enum_stringify = "0.5.0"
fern = "0.6.2"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-timer = "3.0.3"
futures-util = "0.3.30"
humantime = "2.1.0"
log = "0.4.22"
message-io = "0.18.2"
polodb_core = "4.4.1"
ratatui = "0.27.0"
regex = "1.10.4"
rpassword = "7.3.1"
serde = "1.0.198"
serde_json = "1.0.116"
thiserror = "1.0.63"
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
tui-pattern-highlighter = "0.2.2"
tui-popup = "0.4.4"
tui-textarea = { version = "0.5.1", features = ["search"] }
uuid = "1.3.0"
